# context-flow

./: .mcp.json  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
commands/: backfill.md  switch.md
docs/plans/: 2026-03-01-session-level-addressing-design.md  2026-03-05-multi-instance-design.md  2026-03-05-session-hints-plan.md
hooks/: hooks.json
references/: formats.md
scripts/: approve-scripts.sh  attach-workstream.sh  common.sh  complete-save.sh  context-monitor.sh  cwd-changed.sh  init-data-dir.sh  migrate-data.sh  migrate-from-workstreams.sh  new-registry.sh  park-registry.sh  pre-compact-save.sh  read-data-file.sh  reset-counter.sh  session-end.sh  session-start.sh  statusline.sh  switch-registry.sh  update-registry.sh  write-data-file.sh
server/: README.md  pyproject.toml
server/context_flow_server/: __init__.py  __main__.py  db.py  formatter.py  indexer.py  server.py  tagger.py
server/relay_server/: __init__.py  __main__.py  db.py  elicitation.py  indexer.py  server.py  workstreams.py
server/tests/: test_create_park_workstream.py  test_db.py  test_elicitation.py  test_formatter.py  test_hooks_scripts.py  test_indexer.py  test_manage_idea.py  test_save_workstream.py  test_server.py  test_session_addressing.py  test_summarize_activity.py  test_switch_list_workstream.py  test_tagger.py  test_write_session_hint.py
skills/backfill/: SKILL.md
skills/idea/: SKILL.md
skills/list/: SKILL.md
skills/new/: SKILL.md
skills/park/: SKILL.md
templates/: state.md  workstreams.json
(+5 files in other folders)
