[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay-server"
version = "0.4.0"
description = "MCP server for searching Claude Code conversation history"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
relay-server = "relay_server:main"
